WEB 20170110 04 bruno - Z-index fix

--- a/bundles/lincko/launch/public/styles/generic/account.css
+++ b/bundles/lincko/launch/public/styles/generic/account.css
@@ -64,6 +64,7 @@
 	color: #FFFFFF;
 	position: absolute;
 	margin-left: 4px;
+	z-index: 101;
 }
 
 .account_tab {
